--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-filepond": "^6.0.2",
     "vue-router": "^3.5.2",
     "vue-session": "^1.0.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
