--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-	"start": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@mdi/js": "^6.2.95",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "filepond": "^4.14.0",
     "filepond-plugin-file-metadata": "^1.0.8",
     "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-preview": "^4.6.10",
     "mdi": "^2.2.43",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
     "vue-router": "^3.5.2",
