--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "^4.17.1",
     "filepond": "^4.14.0",
     "filepond-plugin-file-metadata": "^1.0.8",
+    "filepond-plugin-file-validate-size": "^2.2.5",
     "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-preview": "^4.6.10",
     "mdi": "^2.2.43",
+    "moment": "^2.29.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
